[package]
name = "wasm-console"
version = "0.1.0-SNAPSHOT"
authors = ["Ryo Ota <nwtgck@nwtgck.org>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
target = "wasm32-unknown-unknown"

[dependencies]
js-sys = "^0.3.40"
web-sys = "0.3"
wasm-bindgen = "0.2.67"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
